--- a/Git_101.md
+++ b/Git_101.md
@@ -63,7 +63,7 @@ Create a new file containing stuff that you want to upload to your project's rep
 
 Then, add local files to your remote repository*:
 
-`git add <file1> <file2> ...`
+`git add <file1> <file2> ...` (you may also add all files with `git add .`)
 
 `git commit -m "some info about the commited files"`
 
