new commit reverted

--- a/Git_101.md
+++ b/Git_101.md
@@ -109,7 +109,11 @@ To undo a local commit first see the history of commits using:
 
 The, identify the commit code (first str of each entry) and use:
 
-`git revert <commit_code>`
+`git reset --hard <commit_code>`
+
+If you want to reset also the remote to this earlier commit:
+
+`git push --force origin main` (main or branch name)
 
 &nbsp;
 
